Add Cloudinary image upload support for Quality Control and Process Tutorials
- Install cloudinary packages
- Create ImageUpload component for file uploads
- Add API route for image uploads (api.upload-image)
- Create cloudinary.server.ts utility
- Update Quality Control reject modal to use ImageUpload
- Update Process Tutorials to use ImageUpload instead of URL input
- Add Cloudinary env vars to render.yaml
- Update .env with Cloudinary placeholders

--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,9 @@ services:
           property: connectionString
       - key: JWT_SECRET
         generateValue: true
+      - key: CLOUDINARY_CLOUD_NAME
+        sync: false
+      - key: CLOUDINARY_API_KEY
+        sync: false
+      - key: CLOUDINARY_API_SECRET
+        sync: false
