--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@prisma/client": "^6.8.0",
     "@react-pdf/renderer": "^4.3.2",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "cookie": "^1.1.1",
     "dotenv": "^16.4.5",
     "isbot": "^5.1.31",
