--- a/render.yaml
+++ b/render.yaml
@@ -26,3 +26,5 @@ services:
         sync: false
       - key: CLOUDINARY_API_SECRET
         sync: false
+      - key: CLOUDINARY_URL
+        sync: false
